# python-task-karaoke

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  main_window.py  midi_parser.py  pyproject.toml  recording.py  requirements.txt  setup.cfg  simple_karaoke_text.py  song_window.py
python-task-karaoke/: main.py  main_window.py  midi_parser.py  recording.py  search_logic.py  song_window.py
tracks/: Scoundrel_days.kar  Ёлка - Прованс (XG).kar  Загулял.kar  Перемен.kar
